<resources>
    <string name="app_name">Remember</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_event">新建提醒</string>
    <string name="new_event_time">时间</string>
    <string name="new_event_address">地址</string>
    <string name="new_event_thing">事件</string>
    <string name="address_edit_text">请编辑地址</string>
    <string name="event_edit_text">请编辑事件</string>

    <string name="year">年</string>
    <string name="mouth">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="new_event_data__and_time_show_text">您选择的提醒时间为：</string>
    <string name="new_event_address_show_text">请输入地点</string>
    <string name="location_edit_empty">请输入有效地址</string>
    <string name="change_new_event_to_right">请向右滑动</string>
    <string name="change_new_event_to_left">请向左滑动</string>

    <string name="next">下一步</string>
    <string name="location">定位</string>

    <string name="pic_save_right">地图截取成功</string>
    <string name="pic_save_wrong">地图截取失败</string>
    <string name="location_fail">无法启动定位服务</string>
</resources>
